<resources>
    <string name="app_name">Keto Recipes</string>
    <string name="title_recipes">Keto Recipes</string>
    <string name="title_favourites">Favourites</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="side_dish">Side Dish</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="sauce">Sauce</string>
    <string name="snack">Snack</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="snackbar_recipe_added_to_favourites">Recipe added to favourites.</string>
    <string name="snackbar_recipe_removed_from_favourites">Recipe removed from favourites.</string>
    <string name="snackbar_action_ok">OK</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_have_no_favourites_yet">You have no favourites yet</string>
</resources>